--- a/.github/workflows/helm.yaml
+++ b/.github/workflows/helm.yaml
@@ -13,8 +13,8 @@ jobs:
          uses: actions/checkout@v2
        - name: 'build and push helm chart'
          run: |
-          # export HELM_EXPERIMENTAL_OCI=1
-          echo $TOKEN | helm registry login https://ghcr.io --username zs-amrutha --password-stdin
+          export HELM_EXPERIMENTAL_OCI=1
+          echo ${{ secrets.TOKEN }} | helm registry login https://ghcr.io --username zs-amrutha --password-stdin
           cd helm
           helm package .
           helm push *.tgz oci://ghcr.io/zs-amrutha
