--- a/.github/workflows/image-build.yml
+++ b/.github/workflows/image-build.yml
@@ -7,20 +7,22 @@ jobs:
   build:
      runs-on: ubuntu-latest
      steps:
-       - name: 'Checkout'
-         uses: actions/checkout@v2
-       - name: 'cloning repo'
-         uses: actions/checkout@v2
-       - name: 'Creating sample dotnet image'
-         run: |
-           docker ps
-           docker build -t ghcr.io/zs-amrutha/dotnet -f Dockerfile .
-       - name: 'docker login'
-         run: |
-           docker login -u zs-amrutha -p ${{ secrets.TOKEN }} ghcr.io
-       - name: 'docker push'
-         run: |
-           docker push ghcr.io/zs-amrutha/dotnet     
+      - name: 'Checkout'
+        uses: actions/checkout@v2
+      - name: 'cloning repo'
+        uses: actions/checkout@v2
+      - name: Login to GitHub Packages
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}:${{ github.sha }}    
            
              
     
